[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/map.gd" type="Script" id=1]
[ext_resource path="res://scenes/environment/floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/network_setup.gd" type="Script" id=4]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="floor" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.555, 17.3028 )

[node name="floor2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.07714, 0.51717 )

[node name="floor3" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -19.3209, -0.555, 25.4685 )

[node name="floor4" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.1, 0, 0, 0, 20, 0, 0, 0, 0.1, -4.08465, -0.943031, 3.3836 )

[node name="floor5" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.1, 0, 0, 0, 20, 0, 0, 0, 0.1, 16.9025, 2.22939, 10.0161 )

[node name="floor6" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 50, 0, 0, 0, 0.1, 9.80087, 4.9363, 18.1022 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.993294, -3.70031e-09, -0.115613, 0.107751, 0.362471, 0.925746, 0.0419064, -0.931995, 0.36004, 0, 16.0805, 0 )
visible = false
light_energy = 0.4
light_size = 1.0
light_bake_mode = 2
shadow_enabled = true

[node name="NetworkSetup" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -75.0
margin_right = 190.0
margin_bottom = 75.0

[node name="IpAdress" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 380.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Adress"

[node name="Host" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 380.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 60 )
text = "Host"

[node name="Join" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 92.0
margin_right = 380.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/IpAdress" to="NetworkSetup" method="_on_IpAdress_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join" to="NetworkSetup" method="_on_Join_pressed"]
